  
Hammag; 18.04.2009 19:10 GMT+1
----------
[rev. 114-119]

<Gameserver>
  Implemented multi-char vhc support:
    - vhc should now be seen the right way (good pos, good direction) by all present chars
    - Access to spawned vhc requires owner autorization [This is still bugging for some part though]
  Fixed various small things
  Tried an implementation of Jumping (in order to have jumps seen by other chars) [Not tested at all]
  
  As these various things require at least 2 simultaneous connexions, and as I can't easily do that atm, it has not been fully tested.
  
  Warning: my server crashed while I was away with 2 chars connected. I didn't search for the reason, so don't let your server running on an Internet accessible host when you're away.

Hammag; 18.04.2009 20:00 GMT+1
----------
[rev. 120]

<Gameserver>
  Fixed and added bug in handling deconnection of seating char that was causing the crash mentinned in the previous rev.

Hammag; 28.04.2009 13:30 GMT+1
----------
[rev. 121-122]

<Gameserver>
  Fixed many little accessory things, potential bugs and discrepencies
  Cleaned up source code format in some files
  Deactivated as most debug output when dev_debug is not set in conf file (but setting it will generate lots of output !)
  Continued work on vhc. Some small fixes and multichar tests still need to be performed

Hammag; 01.05.2009 13:10 GMT+1
----------
[rev. 123-124]

<Gameserver>
  Small fixes on vhc zoning
  Support for all remaining .def added. Good loading of expected data has not been validated yet.

Hammag; 10.05.2009 02:15 GMT+1
----------
[rev. 125]

<Gameserver>
  Fixed loading of weapons.def
  Started implementation of multiuser viewing of weapon use and basic manual weapon reload

Hammag; 10.05.2009 23:55 GMT+1
----------
[rev. 126]

<Gameserver>
  Improved working and multiuser viewing of weapon reload
  Started implementation of char death and respawn