@@ -102,3 +102,6 @@ takemoney = 50
 
 // Spawns given actor next to player
 spawnactor = 50
+
+// Set weather in a zone
+weather = 50
